[project]
name = "Zipvoice"
version = "0.0.11"
description = "Linacodec is a highly compressive and rapid audio tokenizer for audio models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cn2an",
  "huggingface-hub",
  "inflect",
  "jieba",
  "lhotse",
  "librosa",
  "linacodec",
  "numpy",
  "onnxruntime",
  "piper-phonemize-fix",
  "pydub",
  "pypinyin",
  "safetensors",
  "setuptools<81",
  "tensorboard",
  "torch",
  "torchaudio",
  "transformers",
  "vocos",
]

[project.optional-dependencies]
train = [
  "einops",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.uv.sources]
linacodec = { git = "https://github.com/P2Enjoy/LinaCodec.git" }

[tool.uv.build-backend]
module-root = "" # The root module of the project
